// Copyright (c) 2020 The DAML Authors. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.ledger.api.v1;

import "com/digitalasset/ledger/api/v1/value.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


option java_outer_classname = "CommandsOuterClass";
option java_package = "com.digitalasset.ledger.api.v1";
option csharp_namespace = "Com.DigitalAsset.Ledger.Api.V1";

// A composite command that groups multiple commands together.
message Commands {

  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string ledger_id = 1;

  // Identifier of the on-ledger workflow that this command is a part of.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Optional
  string workflow_id = 2;

  // Uniquely identifies the application (or its part) that issued the command. This is used in tracing
  // across different components and to let applications subscribe to their own submissions only.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string application_id = 3;

  // Uniquely identified the command. This identifier should be unique for each new command within an
  // application domain, i.e., the triple (application_id, party, command_id) must be unique.
  // It can be used for matching the requests with their respective completions.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string command_id = 4;

  // Party on whose behalf the command should be executed. It is up to the server to verify that the
  // authorisation can be granted and that the connection has been authenticated for that party.
  // Must be a valid PartyIdString (as described in ``value.proto``).
  // Required
  string party = 5;

  // MUST be an approximation of the wall clock time on the ledger server.
  // Required
  google.protobuf.Timestamp ledger_effective_time = 6;

  // The deadline for observing this command in the completion stream before it can be considered to have timed out.
  // Required
  google.protobuf.Timestamp maximum_record_time = 7;

  // Individual elements of this atomic command. Must be non-empty.
  // Required
  repeated Command commands = 8;

  // The time to live (TTL).
  // In the time window between the first submission of a command and TTL later,
  // all commands with the same submitter and command ID will be deduplicated, i.e.,
  // at most one of these commands will have an effect on the ledger.
  // Optional
  google.protobuf.Duration ttl = 9;
}

// A command can either create a new contract or exercise a choice on an existing contract.
message Command {
  oneof command {
    CreateCommand create = 1;
    ExerciseCommand exercise = 2;
    ExerciseByKeyCommand exerciseByKey = 4;
    CreateAndExerciseCommand createAndExercise = 3;
  }
}

// Create a new contract instance based on a template.
message CreateCommand {

  // The template of contract the client wants to create.
  // Required
  Identifier template_id = 1;

  // The arguments required for creating a contract from this template.
  // Required
  Record create_arguments = 2;
}

// Exercise a choice on an existing contract.
message ExerciseCommand {

  // The template of contract the client wants to exercise.
  // Required
  Identifier template_id = 1;

  // The ID of the contract the client wants to exercise upon.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string contract_id = 2;

  // The name of the choice the client wants to exercise.
  // Must be a valid NameString (as described in ``value.proto``)
  // Required
  string choice = 3;

  // The argument for this choice.
  // Required
  Value choice_argument = 4;
}

// Exercise a choice on an existing contract specified by its key.
message ExerciseByKeyCommand {

  // The template of contract the client wants to exercise.
  // Required
  Identifier template_id = 1;

  // The key of the contract the client wants to exercise upon.
  // Required
  Value contract_key = 2;

  // The name of the choice the client wants to exercise.
  // Must be a valid NameString (as described in ``value.proto``)
  // Required
  string choice = 3;

  // The argument for this choice.
  // Required
  Value choice_argument = 4;
}

// Create a contract and exercise a choice on it in the same transaction.
message CreateAndExerciseCommand {
  // The template of the contract the client wants to create.
  // Required
  Identifier template_id = 1;

  // The arguments required for creating a contract from this template.
  // Required
  Record create_arguments = 2;

  // The name of the choice the client wants to exercise.
  // Must be a valid NameString (as described in ``value.proto``).
  // Required
  string choice = 3;

  // The argument for this choice.
  // Required
  Value choice_argument = 4;
}
